# JOGO-PLATAFORMA

./: .gitignore  Chefao.cpp  Chefao.hpp  DigramaFinal.mdj  Ente.cpp  Ente.hpp  Entidade.cpp  Entidade.hpp  FlyingEye.cpp  Gerenciador_Colisoes.cpp  Gerenciador_Colisoes.hpp  Gerenciador_Estados.hpp  Gerenciador_Eventos.hpp  Gerenciador_Grafico.cpp  Gerenciador_Grafico.hpp  Inimigo.cpp  Inimigo.hpp  Jogador.cpp  Jogador.hpp  Jogo.rar  Jogo.vcxproj  Jogo.vcxproj.filters  Lista.hpp  ListaEntidade.cpp  ListaEntidade.hpp  Mushroom.cpp  Mushroom.hpp  Obstaculo.cpp  Obstaculo.hpp  Parede.cpp  Parede.hpp  Plataforma.cpp  Portal.cpp  Portal.hpp  Principal.cpp  Principal.hpp  Projetil.cpp  Projetil.hpp  Relatório Jogo.docx  Serra.cpp  (+2 more)
Fases/: fase1-1p.txt  fase1-2p.txt  fase2-1p.txt  fase2-2p.txt
Headers/: Animacao.hpp  Chefao.hpp  Ente.hpp  Entidade.hpp  Espinho.hpp  Fase.hpp  Floresta.hpp  Gerenciador_Colisoes.hpp  Gerenciador_Grafico.hpp  Inimigo.hpp  Jogador.hpp  Lista.hpp  ListaEntidade.hpp  Mushroom.hpp  Obstaculo.hpp  Parede.hpp  Personagem.hpp  Plataforma.hpp  Portal.hpp  Principal.hpp  Serra.hpp  (+4 more)
game/: .gitignore  CMakeLists.txt
game/JOGO_2D/: JOGO_2D.APS
game/JOGO_2D/Headers/: Cogumelo.hpp  Entidade.hpp  Espinho.hpp  Fase.hpp  Floresta.hpp  Gerenciador_Estados.hpp  Gerenciador_Eventos.hpp  Gerenciador_Grafico.hpp  Inimigo.hpp  Obstaculo.hpp  OlhoVoador.hpp  Parede.hpp  Personagem.hpp  Plataforma.hpp  Principal.hpp  Projetil.hpp  Tela.hpp
game/JOGO_2D/Sources/: Animacao.cpp  Chefao.cpp  Ente.cpp  Gerenciador_Colisoes.cpp  Gerenciador_Eventos.cpp  Inimigo.cpp  Jogador.cpp  ListaEntidade.cpp  Menu.cpp  Obstaculo.cpp  Parede.cpp  Portal.cpp  Principal.cpp  Projetil.cpp  Tela.cpp  main.cpp
game/JOGO_2D/x64/Debug/: JOGO_2D.res
(+171 files in other folders)
